[project]
name = "keyword-context-analyzer"
version = "0.1.0"
description = "NLP keyword context analysis using spaCy"
authors = [
    {name = "Research Team", email = "research@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "spacy>=3.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "textblob>=0.17.0",
    "en-core-web-sm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
